Update security settings and tests for Spring Boot project
The project's security settings have been updated to account for different active profiles i.e. production or test. Various test cases have been adjusted accordingly to work with the new security settings. The Github actions workflow for Maven has also been updated to install PostgreSQL before running tests on the 'test' spring profile.