@@ -5,12 +5,16 @@ import com.dcp.api_service.service.ProblemService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
 import static org.hamcrest.Matchers.hasSize;
 import static org.mockito.Mockito.when;
@@ -19,6 +23,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @WebMvcTest(ProblemController.class)
+@AutoConfigureMockMvc
 public class ProblemControllerTest {
 
 	@Autowired
@@ -32,12 +37,13 @@ public class ProblemControllerTest {
 	@BeforeEach
 	public void setUp() {
 		problem = new Problem(1L, 123, "Test Problem", "test-problem", "Test Content", "Easy",
-			Arrays.asList("Array", "String"), Arrays.asList("Company1", "Company2"), Arrays.asList("Hint1"), "http://test.link");
+			Arrays.asList("Array", "String"), Arrays.asList("Company1", "Company2"), List.of("Hint1"), "https://test.link");
 	}
 
 	@Test
+	@WithMockUser
 	public void testGetAllProblems() throws Exception {
-		when(problemService.getAllProblems()).thenReturn(Arrays.asList(problem));
+		when(problemService.getAllProblems()).thenReturn(Collections.singletonList(problem));
 		mockMvc.perform(get("/api/problems")
 				.contentType(MediaType.APPLICATION_JSON))
 			.andExpect(status().isOk())
@@ -46,6 +52,7 @@ public class ProblemControllerTest {
 	}
 
 	@Test
+	@WithMockUser
 	public void testGetProblemBySlug() throws Exception {
 		when(problemService.getProblemBySlug("test-problem")).thenReturn(problem);
 		mockMvc.perform(get("/api/problems/test-problem")
@@ -54,4 +61,3 @@ public class ProblemControllerTest {
 			.andExpect(jsonPath("$.title").value("Test Problem"));
 	}
 }
-
